--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     </div>
                     </div>
         <script src="https://kit.fontawesome.com/306ddae9eb.js" crossorigin="anonymous"></script>
-        <script src="JS/scripts.js"></script>
-        <script src="JS/modal.js"></script>
+        <script src="/JS/scripts.js"></script>
+        <script src="/JS/modal.js"></script>
     </body>
     </html>
