--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="second__block">
                     <a href="#main__conteiner-scroll" class="mb__main-link-menu">Меню</a>
-                    <a href="HTML/AboutPage.html" class="mb__main-link">Про нас</a>
+                    <a href="" class="mb__main-link">Про нас</a>
                     <a href="#bouquet-scroll" class="mb__bouquete">Букети</a>
                 </div>
                 <div class="mb__block-last">
@@ -46,7 +46,7 @@
                     <nav class="header__menu menu">
                         <ul class="menu__list">
                             <li class="menu__item"><a href="#main__conteiner-scroll" class="menu__link">МЕНЮ</a></li>
-                            <li class="menu__item"><a href="HTML/AboutPage.html" class="menu__link_about">ПРО НАС</a></li>
+                            <li class="menu__item"><a href="/HTML/AboutPage.html" class="menu__link_about">ПРО НАС</a></li>
                             <li class="menu__item"><a href="#bouquet-scroll" class="menu__link_bouquet">БУКЕТИ</a></li>
                         </ul>
                     </nav>
@@ -293,7 +293,7 @@
                     
                     <div class="bouquet__block">
                         <div class="bouquet__text__conteiner" id="bouquet-scroll">
-                            <a for="">Букети</a>
+                            <label for="">Букети</label>
                         </div>
 
                         <!-- Фото букетів -->
@@ -301,42 +301,54 @@
                         <div class="bouquet__conteiner">
                             <div class="up__block-bouquet">
                                 <div class="block__first-bouqet">
-                                    <img src="Images/Bouquet's/bouquet1.svg" alt="Don't found image">
-                                    <div class="name__bouquet-text">
-                                        <label for="">М'ясні</label>
-                                    </div>
+                                    <a href="/HTML/MeatBouquets.html">
+                                        <img  src="Images/Bouquet's/Main page bouquet's/bouquet1.svg"  alt="Don't found image" > 
+                                        <div class="name__bouquet-text">
+                                            <label for="" >М'ясні </label>
+                                        </div>
+                                    </a>
                                 </div>      
                                 <div class="block__two-bouqet">
-                                    <img src="Images/Bouquet's/bouquet2.svg" alt="Don't found image">
-                                    <div class="name__bouquet-text">
-                                        <label for="">Солодкі</label>
-                                    </div>
+                                    <a href="/HTML/SweetBouquets.html">
+                                        <img src="Images/Bouquet's/Main page bouquet's/bouquet2.svg" alt="Don't found image">
+                                        <div class="name__bouquet-text">
+                                            <label for="">Солодкі</label>
+                                        </div>
+                                    </a>
                                 </div> 
                                 <div class="block__three-bouqet">
-                                    <img src="Images/Bouquet's/bouquet3.svg" alt="Don't found image">
-                                    <div class="name__bouquet-text">
-                                        <label for="">Фруктові</label>
-                                    </div>
+                                    <a href="/HTML/FruityBouquets.html">
+                                        <img src="Images/Bouquet's/Main page bouquet's/bouquet3.svg" alt="Don't found image">
+                                        <div class="name__bouquet-text">
+                                            <label for="">Фруктові</label>
+                                        </div>
+                                    </a>
                                 </div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
                             </div>
                             <div class="down__block-bouquet">
                                 <div class="block__first-bouqet-two">
-                                    <img src="Images/Bouquet's/bouquet4.svg" alt="Don't found image">
-                                    <div class="name__bouquet-text">
-                                        <label for="">Із сухофруктів</label>
-                                    </div>
+                                    <a href="/HTML/DriedFruity.html">
+                                        <img src="Images/Bouquet's/Main page bouquet's/bouquet4.svg" alt="Don't found image">
+                                        <div class="name__bouquet-text">
+                                            <label for="">Із сухофруктів</label>
+                                        </div>
+                                    </a>
                                 </div>      
                                 <div class="block__two-bouqet-two">
-                                    <img src="Images/Bouquet's/bouquet5.svg" alt="Don't found image">
-                                    <div class="name__bouquet-text">
-                                        <label for="">Суші-букети</label>
-                                    </div>
+                                    <a href="/HTML/SushiBouquets.html">
+                                        <img src="Images/Bouquet's/Main page bouquet's/bouquet5.svg" alt="Don't found image">
+                                        <div class="name__bouquet-text">
+                                            <label for="">Суші-букети</label>
+                                        </div>
+                                    </a>
                                 </div> 
                                 <div class="block__three-bouqet-two">
-                                    <img src="Images/Bouquet's/bouquet6.svg" alt="Don't found image">
-                                    <div class="name__bouquet-text">
-                                        <label for="">бокси</label>
-                                    </div>
+                                    <a href="/HTML/BoxBouquets.html">
+                                        <img src="Images/Bouquet's/Main page bouquet's/bouquet6.svg" alt="Don't found image">
+                                        <div class="name__bouquet-text">
+                                            <label for="">бокси</label>
+                                        </div>
+                                    </a>
                                 </div>      
                             </div>
                         </div>
