--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="second__block">
                     <a href="#main__conteiner-scroll" class="mb__main-link-menu">Меню</a>
-                    <a href="" class="mb__main-link">Про нас</a>
+                    <a href="HTML/AboutPage.html" class="mb__main-link">Про нас</a>
                     <a href="#bouquet-scroll" class="mb__bouquete">Букети</a>
                 </div>
                 <div class="mb__block-last">
@@ -46,7 +46,7 @@
                     <nav class="header__menu menu">
                         <ul class="menu__list">
                             <li class="menu__item"><a href="#main__conteiner-scroll" class="menu__link">МЕНЮ</a></li>
-                            <li class="menu__item"><a href="/HTML/AboutPage.html" class="menu__link_about">ПРО НАС</a></li>
+                            <li class="menu__item"><a href="HTML/AboutPage.html" class="menu__link_about">ПРО НАС</a></li>
                             <li class="menu__item"><a href="#bouquet-scroll" class="menu__link_bouquet">БУКЕТИ</a></li>
                         </ul>
                     </nav>
@@ -301,7 +301,7 @@
                         <div class="bouquet__conteiner">
                             <div class="up__block-bouquet">
                                 <div class="block__first-bouqet">
-                                    <a href="/HTML/MeatBouquets.html">
+                                    <a href="HTML/MeatBouquets.html">
                                         <img  src="Images/Bouquet's/Main page bouquet's/bouquet1.svg"  alt="Don't found image" > 
                                         <div class="name__bouquet-text">
                                             <label for="" >М'ясні </label>
@@ -309,7 +309,7 @@
                                     </a>
                                 </div>      
                                 <div class="block__two-bouqet">
-                                    <a href="/HTML/SweetBouquets.html">
+                                    <a href="HTML/SweetBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet2.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Солодкі</label>
@@ -317,7 +317,7 @@
                                     </a>
                                 </div> 
                                 <div class="block__three-bouqet">
-                                    <a href="/HTML/FruityBouquets.html">
+                                    <a href="HTML/FruityBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet3.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Фруктові</label>
@@ -335,7 +335,7 @@
                                     </a>
                                 </div>      
                                 <div class="block__two-bouqet-two">
-                                    <a href="/HTML/SushiBouquets.html">
+                                    <a href="HTML/SushiBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet5.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Суші-букети</label>
@@ -343,7 +343,7 @@
                                     </a>
                                 </div> 
                                 <div class="block__three-bouqet-two">
-                                    <a href="/HTML/BoxBouquets.html">
+                                    <a href="HTML/BoxBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet6.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">бокси</label>
