--- a/HTML/BoxBouquets.html
+++ b/HTML/BoxBouquets.html
@@ -66,7 +66,7 @@
             <div class="txt__block">
                 <div class="left__text">
                     <a href="../index.html#bouquet-scroll">Букети</a>
-                    <img src="/Images/arrow.svg" alt="">
+                    <img src="../Images/arrow.svg" alt="">
                     <label>Бокси</label>
                 </div>
                 <div class="right__text">
@@ -79,44 +79,44 @@
         <div class="bouquet__conteiner">
             <div class="up__block-bouquet">
                 <div class="block__first-bouqet">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet1.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet1.PNG" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet2.JPG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet2.JPG" alt="Don't found image">
                 </div> 
                 <div class="block__three-bouqet">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet3.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet3.PNG" alt="Don't found image">
                 </div>
                 <div class="block__three-bouqet">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet4.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet4.PNG" alt="Don't found image">
                 </div> 
             </div>
             <div class="down__block-bouquet">
                 <div class="block__first-bouqet-two">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet5.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet5.PNG" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet-two">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet6.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet6.PNG" alt="Don't found image">
                 </div> 
                 <div class="block__three-bouqet-two">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet7.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet7.PNG" alt="Don't found image">
                 </div>    
                 <div class="block__three-bouqet-two">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet8.HEIC" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet8.HEIC" alt="Don't found image">
                 </div>  
             </div>
             <div class="three__block-bouquet">
                 <div class="block__first-bouqet-two">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet9.png" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet9.png" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet-two">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet10.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet10.PNG" alt="Don't found image">
                 </div> 
                 <div class="block__three-bouqet-two">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet11.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet11.PNG" alt="Don't found image">
                 </div>    
                 <div class="block__three-bouqet-two">
-                    <img src="/Images/Bouquet's/Box bouquet's/bouquet12.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet12.PNG" alt="Don't found image">
                 </div>  
             </div>
         </div>
