--- a/HTML/BoxBouquets.html
+++ b/HTML/BoxBouquets.html
@@ -37,7 +37,7 @@
         <header class="header">
             <div class="header__conteiner">
                 <div class="img__block-logo">
-                    <img class="menu__img-logo" src="/Images/logoForBurger.svg" alt="">
+                    <img class="menu__img-logo" src="../Images/logoForBurger.svg" alt="">
                 </div>
                 <div class="img__block">
                     <img class="menu__img" id="burgerMenu" src="../Images/menu.svg" alt="">
