--- a/HTML/FruityBouquets.html
+++ b/HTML/FruityBouquets.html
@@ -37,7 +37,7 @@
         <header class="header">
             <div class="header__conteiner">
                 <div class="img__block-logo">
-                    <img class="menu__img-logo" src="/Images/logoForBurger.svg" alt="">
+                    <img class="menu__img-logo" src="../Images/logoForBurger.svg" alt="">
                 </div>
                 <div class="img__block">
                     <img class="menu__img" id="burgerMenu" src="../Images/menu.svg" alt="">
@@ -66,7 +66,7 @@
             <div class="txt__block">
                 <div class="left__text">
                     <a href="../index.html#bouquet-scroll">Букети</a>
-                    <img src="/Images/arrow.svg" alt="">
+                    <img src="../Images/arrow.svg" alt="">
                     <label>Фруктові</label>
                 </div>
                 <div class="right__text">
@@ -79,31 +79,31 @@
         <div class="bouquet__conteiner">
             <div class="up__block-bouquet">
                 <div class="block__first-bouqet">
-                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet1.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet1.PNG" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet">
-                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet2.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet2.PNG" alt="Don't found image">
                 </div> 
                 <div class="block__three-bouqet">
-                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet3.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet3.PNG" alt="Don't found image">
                 </div>
                 <div class="block__three-bouqet">
-                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet4.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet4.PNG" alt="Don't found image">
                 </div> 
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
             </div>
             <div class="down__block-bouquet">
                 <div class="block__first-bouqet-two">
-                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet5.HEIC" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet5.HEIC" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet-two">
-                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet6.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet6.PNG" alt="Don't found image">
                 </div> 
                 <div class="block__three-bouqet-two">
-                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet7.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet7.PNG" alt="Don't found image">
                 </div>    
                 <div class="block__three-bouqet-two">
-                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet8.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet8.PNG" alt="Don't found image">
                 </div>  
             </div>
         </div>
