--- a/HTML/SweetBouquets.html
+++ b/HTML/SweetBouquets.html
@@ -97,7 +97,7 @@
                     <img src="../Images/Bouquet's/Sweet bouquet's/bouquet17.HEIC" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet-two">
-                    <img src="/Images/Bouquet's/Sweet bouquet's/bouquet6.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Sweet bouquet's/bouquet6.PNG" alt="Don't found image">
                 </div> 
                 <div class="block__three-bouqet-two">
                     <img src="../Images/Bouquet's/Sweet bouquet's/bouquet7.PNG" alt="Don't found image">
