--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                             </div>
                             <div class="down__block-bouquet">
                                 <div class="block__first-bouqet-two">
-                                    <a href="/HTML/DriedFruity.html">
+                                    <a href="HTML/DriedFruity.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet4.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Із сухофруктів</label>
