--- a/HTML/BoxBouquets.html
+++ b/HTML/BoxBouquets.html
@@ -119,6 +119,20 @@
                     <img src="../Images/Bouquet's/Box bouquet's/bouquet12.PNG" alt="Don't found image">
                 </div>  
             </div>
+            <div class="four__block-bouquet">
+                <div class="block__first-bouqet-two">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet13.JPG" alt="Don't found image">
+                </div>      
+                <div class="block__two-bouqet-two">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet14.PNG" alt="Don't found image">
+                </div> 
+                <div class="block__three-bouqet-two">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet15.JPG" alt="Don't found image">
+                </div>    
+                <div class="block__three-bouqet-two">
+                    <img src="../Images/Bouquet's/Box bouquet's/bouquet16.PNG" alt="Don't found image">
+                </div>  
+            </div>
         </div>
     </div>
     <script src="../JS/boxBouquets.js"></script>
