--- a/HTML/DriedFruity.html
+++ b/HTML/DriedFruity.html
@@ -87,18 +87,38 @@
                 <div class="block__three-bouqet">
                     <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet3.PNG" alt="Don't found image">
                 </div>
+                <div class="block__three-bouqet">
+                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet4.PNG" alt="Don't found image">
+                </div>
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
             </div>
             <div class="down__block-bouquet">
                 <div class="block__first-bouqet-two">
-                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet4.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet5.PNG" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet-two">
-                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet5.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet6.PNG" alt="Don't found image">
                 </div> 
                 <div class="block__three-bouqet-two">
-                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet6.PNG" alt="Don't found image">
-                </div>    
+                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet7.PNG" alt="Don't found image">
+                </div>   
+                <div class="block__three-bouqet">
+                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet8.PNG" alt="Don't found image">
+                </div> 
+            </div>
+            <div class="three__block-bouquet">
+                <div class="block__first-bouqet-two">
+                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet9.PNG" alt="Don't found image">
+                </div>      
+                <div class="block__two-bouqet-two">
+                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet10.PNG" alt="Don't found image">
+                </div> 
+                <div class="block__three-bouqet-two">
+                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet11.PNG" alt="Don't found image">
+                </div>   
+                <div class="block__three-bouqet">
+                    <img src="../Images/Bouquet's/DriedFruits bouquet's/bouquet12.PNG" alt="Don't found image">
+                </div> 
             </div>
         </div>
     </div>
