--- a/HTML/FruityBouquets.html
+++ b/HTML/FruityBouquets.html
@@ -79,7 +79,7 @@
         <div class="bouquet__conteiner">
             <div class="up__block-bouquet">
                 <div class="block__first-bouqet">
-                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet1.PNG" alt="Don't found image">
+                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet1.PNG" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet">
                     <img src="../Images/Bouquet's/Fruity bouquet's/bouquet2.PNG" alt="Don't found image">
@@ -104,6 +104,20 @@
                 </div>    
                 <div class="block__three-bouqet-two">
                     <img src="../Images/Bouquet's/Fruity bouquet's/bouquet8.PNG" alt="Don't found image">
+                </div>  
+            </div>
+            <div class="three__block-bouquet">
+                <div class="block__first-bouqet-two">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet9.JPG" alt="Don't found image">
+                </div>      
+                <div class="block__two-bouqet-two">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet10.PNG" alt="Don't found image">
+                </div> 
+                <div class="block__three-bouqet-two">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet11.PNG" alt="Don't found image">
+                </div>    
+                <div class="block__three-bouqet-two">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet12.PNG" alt="Don't found image">
                 </div>  
             </div>
         </div>
