--- a/HTML/MeatBouquets.html
+++ b/HTML/MeatBouquets.html
@@ -103,9 +103,38 @@
                     <img src="../Images/Bouquet's/Meet bouquet's/bouquet6.PNG" alt="Don't found image">
                 </div>    
                 <div class="block__three-bouqet-two">
-                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet8.JPG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet8.PNG" alt="Don't found image">
                 </div>  
             </div>
+            <div class="three__block-bouquet">
+                <div class="block__first-bouqet-two">
+                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet9.PNG" alt="Don't found image">
+                </div>      
+                <div class="block__two-bouqet-two">
+                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet10.PNG" alt="Don't found image">
+                </div> 
+                <div class="block__three-bouqet-two">
+                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet11.PNG" alt="Don't found image">
+                </div>    
+                <div class="block__three-bouqet-two">
+                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet12.PNG" alt="Don't found image">
+                </div>  
+            </div>
+            <div class="four__block-bouquet">
+                <div class="block__first-bouqet-two">
+                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet13.JPG" alt="Don't found image">
+                </div>      
+                <div class="block__two-bouqet-two">
+                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet14.PNG" alt="Don't found image">
+                </div> 
+                <div class="block__three-bouqet-two">
+                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet15.PNG" alt="Don't found image">
+                </div>    
+                <div class="block__three-bouqet-two">
+                    <img src="../Images/Bouquet's/Meet bouquet's/bouquet16.PNG" alt="Don't found image">
+                </div>  
+            </div>
+
         </div>
     </div>
     <script src="../JS/meatBouquets.js"></script>
