--- a/HTML/SushiBouquets.html
+++ b/HTML/SushiBouquets.html
@@ -79,7 +79,7 @@
         <div class="bouquet__conteiner">
             <div class="up__block-bouquet">
                 <div class="block__first-bouqet">
-                    <img src="../Images/Bouquet's/Sushi bouquet's/bouquet1.PNG" alt="Don't found image">
+                    <img src="/Images/Bouquet's/Sushi bouquet's/bouquet1.PNG" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet">
                     <img src="../Images/Bouquet's/Sushi bouquet's/bouquet2.PNG" alt="Don't found image">
@@ -87,17 +87,23 @@
                 <div class="block__three-bouqet">
                     <img src="../Images/Bouquet's/Sushi bouquet's/bouquet3.PNG" alt="Don't found image">
                 </div>
+                <div class="block__three-bouqet">
+                    <img src="../Images/Bouquet's/Sushi bouquet's/bouquet4.JPG" alt="Don't found image">
+                </div>
             </div>
             <div class="down__block-bouquet">
                 <div class="block__first-bouqet-two">
-                    <img src="../Images/Bouquet's/Sushi bouquet's/bouquet4.JPG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Sushi bouquet's/bouquet5.JPG" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet-two">
-                    <img src="../Images/Bouquet's/Sushi bouquet's/bouquet5.JPG" alt="Don't found image">
-                </div> 
-                <div class="block__three-bouqet-two">
                     <img src="../Images/Bouquet's/Sushi bouquet's/bouquet6.JPG" alt="Don't found image">
-                </div>    
+                </div> 
+                <div class="block__three-bouqet">
+                    <img src="../Images/Bouquet's/Sushi bouquet's/bouquet7.PNG" alt="Don't found image">
+                </div>  
+                <div class="block__three-bouqet">
+                    <img src="../Images/Bouquet's/Sushi bouquet's/bouquet9.PNG" alt="Don't found image">
+                </div> 
             </div>
         </div>
     </div>
