--- a/HTML/FruityBouquets.html
+++ b/HTML/FruityBouquets.html
@@ -79,7 +79,7 @@
         <div class="bouquet__conteiner">
             <div class="up__block-bouquet">
                 <div class="block__first-bouqet">
-                    <img src="/Images/Bouquet's/Fruity bouquet's/bouquet1.PNG" alt="Don't found image">
+                    <img src="../Images/Bouquet's/Fruity bouquet's/bouquet1.PNG" alt="Don't found image">
                 </div>      
                 <div class="block__two-bouqet">
                     <img src="../Images/Bouquet's/Fruity bouquet's/bouquet2.PNG" alt="Don't found image">
