--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="Images/logo-smachno-studio.png" type="image/png">
         <link href="CSS/style.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="CSS/MenuAndBurger.css">
         <link rel="stylesheet" href="CSS/modal.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
         <title>Smachno Studio</title>
     </head>
-    <body>
+    <body class="main__body">
         <div class="menu__burger">
             <div class="menu__burger__main">
                 <div class="up__block-logo">
@@ -22,7 +23,7 @@
                 </div>
                 <div class="second__block">
                     <a href="#main__conteiner-scroll" class="mb__main-link-menu">Меню</a>
-                    <a href="HTML/AboutPage.html" class="mb__main-link">Про нас</a>
+                    <a href="" class="mb__main-link">Про нас</a>
                     <a href="#bouquet-scroll" class="mb__bouquete">Букети</a>
                 </div>
                 <div class="mb__block-last">
@@ -40,13 +41,16 @@
         <div class="wrapper" >
             <header class="header">
                 <div class="header__conteiner">
+                    <div class="img__block-logo">
+                        <img class="menu__img-logo" src="/Images/logoForBurger.svg" alt="">
+                    </div>
                     <div class="img__block">
                         <img class="menu__img" id="burgerMenu" src="Images/menu.svg" alt="">
                     </div>
                     <nav class="header__menu menu">
                         <ul class="menu__list">
                             <li class="menu__item"><a href="#main__conteiner-scroll" class="menu__link">МЕНЮ</a></li>
-                            <li class="menu__item"><a href="HTML/AboutPage.html" class="menu__link_about">ПРО НАС</a></li>
+                            <li class="menu__item"><a href="/HTML/AboutPage.html" class="menu__link_about">ПРО НАС</a></li>
                             <li class="menu__item"><a href="#bouquet-scroll" class="menu__link_bouquet">БУКЕТИ</a></li>
                         </ul>
                     </nav>
@@ -301,7 +305,7 @@
                         <div class="bouquet__conteiner">
                             <div class="up__block-bouquet">
                                 <div class="block__first-bouqet">
-                                    <a href="HTML/MeatBouquets.html">
+                                    <a href="/HTML/MeatBouquets.html">
                                         <img  src="Images/Bouquet's/Main page bouquet's/bouquet1.svg"  alt="Don't found image" > 
                                         <div class="name__bouquet-text">
                                             <label for="" >М'ясні </label>
@@ -309,7 +313,7 @@
                                     </a>
                                 </div>      
                                 <div class="block__two-bouqet">
-                                    <a href="HTML/SweetBouquets.html">
+                                    <a href="/HTML/SweetBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet2.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Солодкі</label>
@@ -317,7 +321,7 @@
                                     </a>
                                 </div> 
                                 <div class="block__three-bouqet">
-                                    <a href="HTML/FruityBouquets.html">
+                                    <a href="/HTML/FruityBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet3.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Фруктові</label>
@@ -327,7 +331,7 @@
                             </div>
                             <div class="down__block-bouquet">
                                 <div class="block__first-bouqet-two">
-                                    <a href="HTML/DriedFruity.html">
+                                    <a href="/HTML/DriedFruity.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet4.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Із сухофруктів</label>
@@ -335,7 +339,7 @@
                                     </a>
                                 </div>      
                                 <div class="block__two-bouqet-two">
-                                    <a href="HTML/SushiBouquets.html">
+                                    <a href="/HTML/SushiBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet5.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Суші-букети</label>
@@ -343,7 +347,7 @@
                                     </a>
                                 </div> 
                                 <div class="block__three-bouqet-two">
-                                    <a href="HTML/BoxBouquets.html">
+                                    <a href="/HTML/BoxBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet6.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">бокси</label>
