--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         <div class="bouquet__conteiner">
                             <div class="up__block-bouquet">
                                 <div class="block__first-bouqet">
-                                    <a href="/HTML/MeatBouquets.html">
+                                    <a href="HTML/MeatBouquets.html">
                                         <img  src="Images/Bouquet's/Main page bouquet's/bouquet1.svg"  alt="Don't found image" > 
                                         <div class="name__bouquet-text">
                                             <label for="" >М'ясні </label>
@@ -313,7 +313,7 @@
                                     </a>
                                 </div>      
                                 <div class="block__two-bouqet">
-                                    <a href="/HTML/SweetBouquets.html">
+                                    <a href="HTML/SweetBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet2.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Солодкі</label>
@@ -321,7 +321,7 @@
                                     </a>
                                 </div> 
                                 <div class="block__three-bouqet">
-                                    <a href="/HTML/FruityBouquets.html">
+                                    <a href="HTML/FruityBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet3.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Фруктові</label>
@@ -331,7 +331,7 @@
                             </div>
                             <div class="down__block-bouquet">
                                 <div class="block__first-bouqet-two">
-                                    <a href="/HTML/DriedFruity.html">
+                                    <a href="HTML/DriedFruity.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet4.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Із сухофруктів</label>
@@ -339,7 +339,7 @@
                                     </a>
                                 </div>      
                                 <div class="block__two-bouqet-two">
-                                    <a href="/HTML/SushiBouquets.html">
+                                    <a href="HTML/SushiBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet5.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">Суші-букети</label>
@@ -347,7 +347,7 @@
                                     </a>
                                 </div> 
                                 <div class="block__three-bouqet-two">
-                                    <a href="/HTML/BoxBouquets.html">
+                                    <a href="HTML/BoxBouquets.html">
                                         <img src="Images/Bouquet's/Main page bouquet's/bouquet6.svg" alt="Don't found image">
                                         <div class="name__bouquet-text">
                                             <label for="">бокси</label>
