--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="second__block">
                     <a href="#main__conteiner-scroll" class="mb__main-link-menu">Меню</a>
-                    <a href="" class="mb__main-link">Про нас</a>
+                    <a href="HTML/AboutPage.html" class="mb__main-link">Про нас</a>
                     <a href="#bouquet-scroll" class="mb__bouquete">Букети</a>
                 </div>
                 <div class="mb__block-last">
@@ -50,7 +50,7 @@
                     <nav class="header__menu menu">
                         <ul class="menu__list">
                             <li class="menu__item"><a href="#main__conteiner-scroll" class="menu__link">МЕНЮ</a></li>
-                            <li class="menu__item"><a href="/HTML/AboutPage.html" class="menu__link_about">ПРО НАС</a></li>
+                            <li class="menu__item"><a href="HTML/AboutPage.html" class="menu__link_about">ПРО НАС</a></li>
                             <li class="menu__item"><a href="#bouquet-scroll" class="menu__link_bouquet">БУКЕТИ</a></li>
                         </ul>
                     </nav>
